WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70851
Caret can be positioned or repainted incorrectly in flipped-blocks multi-column blocks
https://bugs.webkit.org/show_bug.cgi?id=70851
Summary
Caret can be positioned or repainted incorrectly in flipped-blocks multi-colu...
mitz
Reported
2011-10-25 14:15:38 PDT
Caret can be positioned or repainted incorrectly in flipped-blocks multi-column blocks
Attachments
Moved flipped-blocks adjustments from adjustForColumns() into offsetFromContainer()
(4.62 KB, patch)
2011-10-25 14:22 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-10-25 14:22:13 PDT
Created
attachment 112402
[details]
Moved flipped-blocks adjustments from adjustForColumns() into offsetFromContainer()
Dave Hyatt
Comment 2
2011-10-25 15:37:31 PDT
Comment on
attachment 112402
[details]
Moved flipped-blocks adjustments from adjustForColumns() into offsetFromContainer() r=me
mitz
Comment 3
2011-10-25 15:45:08 PDT
Fixed in <
http://trac.webkit.org/r98400
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug